# project-alpro-strukdat-app-s2

./: CMakeLists.txt
src/engine/: video_engine.cpp  video_engine.hpp
src/utils/: media_scan.cpp  media_scan.hpp
ui/: app-window.slint
